--- a/README
+++ b/README
@@ -1,5 +1,10 @@
-IMPORTANT INFO
-----------------
+
+Uses a Javascript client to capture and validate user input , uses a PHP middleware layer for demonstration of JSON RPC by using 
+PHP sockets to send data to Java Server. 
+
+
+
+SETUP INSTRUCTIONS 
 
 1)SET THE DATABASE PROPERTIES and JAVA SERVER port in config.properties 
 2)The php folder contains 5 files (3 php files and one js and one css file)
