--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 
-Uses a Javascript client to capture and validate user input , uses a PHP middleware layer for demonstration of JSON RPC by using 
-for RESTFUL interactions that uses sockets to send data to Java Server. Backend uses POJO's (Plain Old Java Objects) for database interactions.
+This Application is demonstrates one of the ways RESTFUL Webservices can be built without using HTTP for REST
+Uses a Javascript client to capture and validate user input , uses a PHP middleware layer for demonstration of JSON RPC using 
+sockets to send data to Java Server. Backend uses POJO's (Plain Old Java Objects) for database interactions.
 
 
 
