--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-This Application is demonstrates one of the ways RESTFUL Webservices can be built without using HTTP for REST
+This Application demonstrates one of the ways RESTFUL Webservices can be built without using HTTP for REST
 Uses a Javascript client to capture and validate user input , uses a PHP middleware layer for demonstration of JSON RPC using 
 sockets to send data to Java Server. Backend uses POJO's (Plain Old Java Objects) for database interactions.
 
