--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-<b>Overview </b>
+
 
 This Application demonstrates one of the ways RESTFUL Webservices can be built without using HTTP for REST
 Uses a Javascript client to capture and validate user input , uses a PHP middleware layer for demonstration of JSON RPC using 
@@ -7,7 +7,7 @@ sockets to send data to Java Server. Backend uses POJO's (Plain Old Java Objects
 
 
 
-<b>SETUP INSTRUCTIONS </b>
+SETUP INSTRUCTIONS 
 
 1)SET THE DATABASE PROPERTIES and JAVA SERVER port in config.properties 
 2)The php folder contains 5 files (3 php files and one js and one css file)
