--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-RESTFUL WEB SERVICES
+<h3>RESTFUL WEB SERVICES</h3>
 
 
       This Application demonstrates one of the ways RESTFUL Webservices can be built without using HTTP for REST
@@ -6,7 +6,7 @@ RESTFUL WEB SERVICES
       sockets to send data to Java Server. Backend uses POJO's (Plain Old Java Objects) for database interactions.
 
 
-SETUP INSTRUCTIONS 
+<h2>SETUP INSTRUCTIONS </h2>
 
       1)SET THE DATABASE PROPERTIES and JAVA SERVER port in config.properties 
       2)The php folder contains 5 files (3 php files and one js and one css file)
