--- a/README
+++ b/README
@@ -1,23 +1,2 @@
-<h3>RESTFUL WEB SERVICES</h3>
-
-
-      This Application demonstrates one of the ways RESTFUL Webservices can be built without using HTTP for REST
-      Uses a Javascript client to capture and validate user input , uses a PHP middleware layer for demonstration of JSON RPC using 
-      sockets to send data to Java Server. Backend uses POJO's (Plain Old Java Objects) for database interactions.
-
-
-<h2>SETUP INSTRUCTIONS </h2>
-
-      1)SET THE DATABASE PROPERTIES and JAVA SERVER port in config.properties 
-      2)The php folder contains 5 files (3 php files and one js and one css file)
-
-      validation.php- contains regex for user input validation
-      client.php - contains all the methods to interact with Java server
-      index.php - user input form 
-   
-      index.js- parses json response, makes AJAX calls to php server and contains DOM manipulation code
-
-      3) config.properties has to be in the BIN folder (same location as the the rit756 package and NOT inside the package).
-         ie if compiled java class files are in /usr/bin/assignment/rit756 then config.properties has to reside in /usr/bin/assignment/
-
+<h3> JSON-RPC </h3>
 
